add qq version 8.8.17